testsuite/bsc.real/evaluator/errors/SubPosInf.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling SubPosInf.bsv
code generation for sysSubPosInf starts
Error: "SubPosInf.bsv", line 7, column 22: (G0113)
  An addition or subtraction operator attempted to combine positive and
  negative infinity during elaboration.
  During elaboration of the body of rule `r' at "SubPosInf.bsv", line 9,
  column 10.
  During elaboration of `sysSubPosInf' at "SubPosInf.bsv", line 4, column 8.
